feat: BattleController.startBattle with mocks (TDD - GREEN)